--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "core-js": "^3.8.3",
         "eslint-config-prettier": "^8.5.0",
         "pinia": "^2.0.13",
+        "prettier": "^2.6.2",
         "register-service-worker": "^1.7.2",
         "vue": "^3.2.13",
         "vue-loader": "^16.0.0-rc.1",
