--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "eslint-plugin-vue": "^8.0.3",
         "eslint-plugin-vuejs-accessibility": "^1.1.0",
         "jest": "^27.0.5",
+        "node-sass": "^7.0.1",
         "sass": "^1.32.7",
         "sass-loader": "^12.0.0",
         "ts-jest": "^27.0.4",
